--- a/draft_/a_1.md
+++ b/draft_/a_1.md
@@ -17,6 +17,7 @@ Ou: também Téo não conhecia tanto assim da Argentina, apesar de ter morado em
 — Você não dirige.
 
 Téo deixou que a cadeira voltasse à posição normal e apoiou os cotovelos sobre a mesa, a testa nas mãos. Não. Era o que mais lhe custava num relacionamento: explicar-se, justificar-se. Dizer que a partir das sete estou em casa e estava no cinema e sim não avisei antes porque sim e porque quis. Era pedir demais: Gustavo percebia as implicâncias e mudava de estratégia, dava-lhe o espaço que queria, passava uma semana ocupado e súbito aparecia na agência com seu sorriso de advogado e um convite para o almoço.
+
 Entre seus silêncios e as ausências calculadas de Gustavo — podia chamar aquilo de relacionamento? Fosse vício de profissão: qual relacionamento pode durar sem que uma das partes esteja vivendo algum tipo de vida dupla?
 
 Às vezes não sabia se estavam juntos.
@@ -28,3 +29,21 @@ Entre seus silêncios e as ausências calculadas de Gustavo — podia chamar aqu
 — E obviamente não sabe o que é dirigir em Buenos Aires.
 
 — Você também não, Téo.
+
+Fora da sala na recepção era a secretária e Elisa conversando num murmúrio quase por não incomodar a discussão que imaginavam atrás da porta fechada. Fosse Téo um pouco menos reservado em relação a Gustavo e Elisa não precisaria tanto malabarismo para entender o que se passava na cabeça do amigo. Se nem Téo sabia chamar aquilo _relacionamento_ que ia dizer Elisa.
+
+— Você lembra o que aconteceu a última vez que pedi sua ajuda com trabalho.
+
+— A gente sobreviveu.
+
+— Não por culpa minha.
+
+Gustavo esticou os braços por sobre a mesa até tocar as mãos de Téo.
+
+— Já sou grandinho, Téo. Se digo que quero ir, e depois me arrependo, o problema é meu. Não vu te impedir de fazer nada. Sem contar que procurar seu tio não pode tão perigoso quanto investigar esquema de lavagem de dinheiro.
+
+— Superfaturamento de.
+
+— Nem me importa. Você já conhece minha mãe.
+
+Era — claro. O inevitável. Quão terrível podia ser uma viagem daquelas, um favor ao primo, uma visita aos pais, tão breve. O tempo de recolher com Roberto as informações últimas que faltassem, se é que haveria ainda algo mais a se saber, de trinta anos que o pai desaparecido e Téo nem se lembrava dele, esse tio ausente, quase inexistente — que o houvesse visto uma vez era demais.
