--- a/draft_/a_1.md
+++ b/draft_/a_1.md
@@ -28,22 +28,28 @@ Entre seus silêncios e as ausências calculadas de Gustavo — podia chamar aqu
 
 — E obviamente não sabe o que é dirigir em Buenos Aires.
 
-— Você também não, Téo.
+— Não pode ser pior do que dirigir no Rio.
 
 Fora da sala na recepção era a secretária e Elisa conversando num murmúrio quase por não incomodar a discussão que imaginavam atrás da porta fechada. Fosse Téo um pouco menos reservado em relação a Gustavo e Elisa não precisaria tanto malabarismo para entender o que se passava na cabeça do amigo. Se nem Téo sabia chamar aquilo _relacionamento_ que ia dizer Elisa.
 
 — Você lembra o que aconteceu a última vez que pedi sua ajuda com trabalho.
 
-— A gente sobreviveu.
-
-— Não por culpa minha.
-
 Gustavo esticou os braços por sobre a mesa até tocar as mãos de Téo.
 
-— Já sou grandinho, Téo. Se digo que quero ir, e depois me arrependo, o problema é meu. Não vu te impedir de fazer nada. Sem contar que procurar seu tio não pode tão perigoso quanto investigar esquema de lavagem de dinheiro.
+— Já sou grandinho, Téo. Se digo que quero ir, e depois me arrependo, o problema é meu. Não estamos amarrados.
 
-— Superfaturamento de.
+E por que o incômodo quando Gustavo só fazia demonstrar que o conhecia e não estava ali para mudá-lo? Que mais ele precisava, enfim? Essa companhia insistente, paciente. Todo o espaço que precisava para se esconder num cinema no fim da tarde, porque estava passando e gostou do poster. Sem avisar a ninguém.
 
-— Nem me importa. Você já conhece minha mãe.
+— Você já conhece minha mãe — Gustavo disse.
 
-Era — claro. O inevitável. Quão terrível podia ser uma viagem daquelas, um favor ao primo, uma visita aos pais, tão breve. O tempo de recolher com Roberto as informações últimas que faltassem, se é que haveria ainda algo mais a se saber, de trinta anos que o pai desaparecido e Téo nem se lembrava dele, esse tio ausente, quase inexistente — que o houvesse visto uma vez era demais.
+Era — claro. O inevitável: feito fosse golpe no queixo. Quão terrível podia ser uma viagem daquelas, um favor ao primo, uma visita aos pais, tão breve. O tempo de recolher com Roberto as informações últimas que faltassem, se é que haveria ainda algo mais a se saber, de trinta anos que o pai desaparecido e Téo nem se lembrava dele, esse tio ausente, quase inexistente — havia visto aquele homem, alguma vez?
+
+Aí o silêncio. Téo não percebeu quando deixou escabar um sorriso meio aborrecido, e talvez aí Gustavo houvesse percebido o desnecessário da agressividade. Pediu desculpas e levantou-se, disse que precisava voltar ao trabalho. Téo pensaria que _yo siempre lo supe_ era — seria? — a mais óbvia das reações e
+
+por que pensava que escondia algo de;
+
+e se tinha mais de quarenta anos. Se seu pai — esse nada desaparecido — havia contrariado todo conservadorismo da família de cidade pequena ao se casar com uma argentina metida a comunista fugida da ditadura militar que vá saber como tinha ido parar naquele fim de mundo do interior paulista. Um pouco mais de crédito àqueles dois rebeldes que eram seus pais, que mais de sessenta anos de idade saíram da roça e se meteram em Buenos Aires para abrir uma agência de viagem; sim?
+
+Gustavo já a mão na porta — Téo quis dizer que _espera_ e _a coisa é um pouco mais complicada do que_. Mas o carioca virou-se e sorriu:
+
+— Te ligo mais tarde.
