--- a/draft_/c_1.md
+++ b/draft_/c_1.md
@@ -6,7 +6,7 @@ Levantou-se e cruzou o cimento até a borda da praça, por onde se estendia a fe
 
 Téo também deu de acompanhar as palmas, mas não viu quando uma moça jovem se aproximou e tomou o menino nos braços. As palmas cessaram, a mãe agradeceu a mulher de tranças, e as pessoas seguiram adiante com seus passeios.
 
-A artesã retomou a seu posto atrás de uma das bancas de pulseiras e brincos e Téo voltou a pensar em seu primo mais novo: a insistência de Pablo contra aquela busca e seu olhar raivoso na última vez que se viram,quando Téo passou para avisá-lo que em algumas horas tomava o ônibus para San Miguel de Tucumán.
+A artesã retomou a seu posto atrás de uma das bancas de pulseiras e brincos e Téo voltou a pensar em seu primo mais novo: a insistência de Pablo contra aquela busca e seu olhar raivoso na última vez que se viram, quando Téo passou para avisá-lo que em algumas horas tomava o rumo de San Miguel de Tucumán.
 
 — _Yo no quiero encontrarlo_— ele havia dito. — _No me interesa que pasó._
 
