pequenos ajustes de texto

--- a/draft_/a_2.md
+++ b/draft_/a_2.md
@@ -18,7 +18,7 @@ Elisa havia parado com o corpo no batente da porta.
 Aproximou-se para ocupar uma das cadeiras em frente à mesa. Téo fechou o zíper da mochila e jogou o corpo para trás. Da janela já fugia o dia, naquela pressa de outubro pelos dias de verão futuro.
 
 -- É trabalho, Elisa -- foi a resposta.
--- Pois bote um mapa de Buenos Aires na mão dele e vá atrás do seu tio.
+-- Pois bote um mapa de Buenos Aires na mão dele e vá atrás do seu tio enquanto ele conhece a Recoleta.
 
 Téo deu de ombros.
 
@@ -43,11 +43,11 @@ Sorriso esboçado. Antes fosse Elisa insistindo para acompanhá-lo naquela inves
 -- Eu gosto dele.
 -- Então?
 
-Téo abriu a boca para responder, mas só fez transformar a expressão numa careta e deixar escapar um _ah_ resmungado. Dizer que _eu não nasci para isso_ embora nem soubesse que podia ser _isso_. Relacionamentos, intimidade, companhia silenciosa para o café da manhã e um tchau apressado porque vou chegar atrasado o trânsito nesta cidade é uma merda. Aquele _erre_ arrastado do sotaque carioca.
+Téo abriu a boca para responder, mas só fez transformar a expressão numa careta e deixar escapar um _ah_ resmungado. Dizer que _eu não nasci para isso_ embora nem soubesse que podia ser _isso_. Relacionamentos, intimidade, companhia silenciosa para o café da manhã e um tchau apressado porque vou chegar atrasado o trânsito nesta cidade é uma merda. Aquele _erre_ arrastado do sotaque carioca que ele escutada por todos os lados, na cidade inteira.
 
-Meter-se contra a corrente numa sociedade que exigia do diferente uma declaração assinada da diferença. Tão cansativa essa constante afirmação reafirmação de identidade preferências e bater o pé por exigir a monotonia de
+Meter-se contra a corrente numa sociedade que exigia de quem não se adequasse uma declaração assinada da diferença. Caminhar a todo tempo com bandeira hasteada. Tão cansativa essa constante afirmação reafirmação de identidade preferências e bater o pé por exigir a monotonia de
 
-(uma vida normal?).
+(uma vida normal?)
 
 Que tanto lhes importava se era gay ou canhoto ou.
 
