--- a/draft_/b_1.md
+++ b/draft_/b_1.md
@@ -37,4 +37,4 @@ não. Gustavo era homem grande e responsável e sabia se virar sozinho e o espan
 
 Mas: a viagem. As horas. As variações de altitude? A umidade inesperada do povoado de Belén e não estava pensando direito. Era investigador particular fora de seu território habitual e de que servia afinal um investigador fora de seu território. Havia escrito a essa que teria sido a paixão adolescente de seu tio: _me gustaría hablar con usted sobre un amigo suyo, de Tucumán_. Um amigo de muito tempo atrás. Dar-se conta de que, se ela soubesse a história de seu tio Antonio, certo seria capaz de deduzir o rumo da conversa.
 
-Mas só fez sugerir que fossem tomar sorvete.
+Disse que fossem tomar sorvete.
